@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.31 2008/12/26 07:46:45 bagder Exp $
+# $Id: Makefile.am,v 1.32 2009/02/23 16:22:46 bagder Exp $
 
 EXTRA_DIST = template.3
 
@@ -67,4 +67,5 @@ dist_man_MANS = \
 	libssh2_userauth_password_ex.3 \
 	libssh2_userauth_publickey_fromfile.3 \
 	libssh2_base64_decode.3 \
-	libssh2_trace.3
+	libssh2_trace.3 \
+	libssh2_version.3
